Restructure after being misled by ChatGPT

--- a/plugin/language/en-GB/en-GB.plg_content_articletextfilter.sys.ini
+++ b/plugin/language/en-GB/en-GB.plg_content_articletextfilter.sys.ini
@@ -1,7 +1,6 @@
 PLG_CONTENT_ARTICLETEXTFILTER="Article Text Filter plugin"
-PLG_CONTENT_ARTICLETEXTFILTER_DESCRIPTION="<div style="_QQ_"text-align: left;"_QQ_">
-  <div id="description">
-    <h3>Article Text Filter plugin</h3>
+PLG_CONTENT_ARTICLETEXTFILTER_DESCRIPTION="<div>
+   <h2>Article Text Filter plugin</h3>
     <p>
       The Article Text Filter plugin allows you to filter the text in a Joomla article based on a few conditions.
       What is shown or hidden can be determined by a condition, the <em>user group</em>,
@@ -9,10 +8,10 @@ PLG_CONTENT_ARTICLETEXTFILTER_DESCRIPTION="<div style="_QQ_"text-align: left;"_Q
       if the article is <em>featured</em> or it is shown on the <em>homepage</em>.
     </p>
     <p>
-      Please see https://github.com/thoni56/joomla_plugin_articletextfilter for full documentation.
+      Please see <a href=\"https://github.com/thoni56/joomla_plugin_articletextfilter\">https://github.com/thoni56/joomla_plugin_articletextfilter</a> for full documentation.
     </p>
     <p>
-di      Here is a quick guide: (use exlamation mark for "_QQ_"not"_QQ_" and vertical bar for "_QQ_"or"_QQ_")
+      Here is a quick guide: (use '!' for \"not\" and '||' for \"or\" to form complex expressions for user id, user and author groups)
     </p>
     <ul>
       <li><em>{guest} ... {/guest}</em> - Text only shown to guests (non registered users)</li>
