--- a/plugin/language/en-GB/en-GB.plg_content_conditionaltext.sys.ini
+++ b/plugin/language/en-GB/en-GB.plg_content_conditionaltext.sys.ini
@@ -1,14 +1,14 @@
-PLG_CONTENT_ARTICLETEXTFILTER="Article Text Filter plugin"
-PLG_CONTENT_ARTICLETEXTFILTER_DESCRIPTION="<div>
-   <h2>Article Text Filter plugin</h3>
+PLG_CONTENT_CONDITIONALTEXT="Conditional Text plugin"
+PLG_CONTENT_CONDITIONALTEXT_DESCRIPTION="<div>
+   <h2>Conditional Text plugin</h3>
     <p>
-      The Article Text Filter plugin allows you to filter the text in a Joomla article based on a few conditions.
-      What is shown or hidden can be determined by a condition, the <em>user group</em>,
-      the <em>user</em>, the <em>author group</em>, the <em>author</em>, if the user is <em>guest</em>,
-      if the article is <em>featured</em> or it is shown on the <em>homepage</em>.
+      The Conditional Text plugin allows you to conditionally show or hide the text in Joomla
+      content based on a few conditions. What is shown or hidden can be determined by a condition,
+      the <em>user group</em>, the <em>user</em>, the <em>author group</em>, the <em>author</em>,
+      if the user is <em>guest</em>, if the article is <em>featured</em> or it is shown on the <em>frontpage</em>.
     </p>
     <p>
-      Please see <a href=\"https://github.com/thoni56/joomla_plugin_articletextfilter\">https://github.com/thoni56/joomla_plugin_articletextfilter</a> for full documentation.
+      Please see <a href=\"https://github.com/thoni56/joomla_plugin_conditionaltext\">https://github.com/thoni56/joomla_plugin_conditionaltext</a> for full documentation.
     </p>
     <p>
       Here is a quick guide: (use '!' for \"not\" and '||' for \"or\" to form complex expressions for user id, user and author groups)
@@ -20,6 +20,6 @@ PLG_CONTENT_ARTICLETEXTFILTER_DESCRIPTION="<div>
       <li><em>{author_group 5} ... {/author_group}</em> - If the author of the article belongs to author group 5, the article content between the plugin tags will be shown.</li>
       <li><em>{author} ... {/author}</em> - Only the logged in author of the Joomla article will see the content between the plugin syntax. There is no need to specify the author id.</li>
       <li><em>{featured} ... {/featured}</em> - The content is only shown if the article is set as featured</li>
-      <li><em>{homepage} ... {/homepage}</em> - The content is only shown if it is on the home page/menu</li>
+      <li><em>{frontpage} ... {/frontpage}</em> - The content is only shown if it is on the front page/menu</li>
     </ul>
 </div>"
